# crclink

./: .clang-format  .clang-format-ignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  specs.md  tox.ini
.github/workflows/: ci.yml  publish.yml
docs/: crcglot-feature-request.md  crcglot-integration.md  protocol.md
scripts/: RELEASE.md  quality.py  release_common.py  release_prep.py  release_publish.py  update_badges.py
src/c/: README.md  crc16_xmodem.c  crc16_xmodem.h  crclink_json.c  crclink_json.h  crclink_json_read.c  crclink_json_read.h  jsmn.h
src/c/test/: .gitignore  Makefile  README.md  test_crclink_json.c  test_crclink_json_read.c
src/crclink/: __init__.py  _crc16_xmodem.py  cli.py  crc16_xmodem.py  errors.py  frame.py
tests/: test_cli.py  test_frame.py
