[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "crclink"
version = "0.1.0"
description = "CRC-protected line framing for embedded serial links"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Chuck", email = "chuck@acrocad.net" }]
dependencies = ["crcglot>=0.21.0"]

[project.scripts]
crclink = "crclink.cli:main"

[project.urls]
Homepage = "https://github.com/hucker/crclink"
Repository = "https://github.com/hucker/crclink"
Issues = "https://github.com/hucker/crclink/issues"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.8"]

[tool.pytest.ini_options]
addopts = "--cov=crclink --cov-report=term-missing --cov-fail-under=90 --doctest-modules"
testpaths = ["tests", "src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["src/crclink"]
