[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "crclink"
version = "0.1.0"
description = "CRC-protected JSON and text line framing for embedded serial links"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Chuck", email = "chuck@acrocad.net" }]
dependencies = []

[project.scripts]
crclink = "crclink.cli:main"

[project.urls]
Homepage = "https://github.com/hucker/crclink"
Repository = "https://github.com/hucker/crclink"
Issues = "https://github.com/hucker/crclink/issues"

[dependency-groups]
# crcglot is a build-time code generator here, not a runtime dependency: it
# generates the vendored crc16-xmodem sources (src/crclink/crc16_xmodem.py and
# src/c/crc16_xmodem.*). Regenerate with `uv run crcglot ...`; never hand-edit.
dev = ["pytest>=8.0", "ruff>=0.8", "crcglot>=0.22.0", "ty>=0.0.49"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests", "src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["src/crclink"]
